--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "api-platform/doctrine-orm": "*",
-        "api-platform/symfony": "*",
+        "api-platform/doctrine-orm": "4.1.*",
+        "api-platform/symfony": "4.1.*",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.15",
         "doctrine/doctrine-migrations-bundle": "^3.4",
@@ -82,8 +82,5 @@
             "allow-contrib": false,
             "require": "7.3.*"
         }
-    },
-    "require-dev": {
-        "symfony/maker-bundle": "^1.63"
     }
 }
